Added frontoffice environment variables to sample env file

--- a/.env.dev.sample
+++ b/.env.dev.sample
@@ -10,3 +10,8 @@ POSTGRES_USER=anemperfeina
 POSTGRES_PASSWORD=s3cret
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
+
+# Frontoffice
+NODE_ENV=production
+NUXT_HOST=0.0.0.0
+NUXT_PORT=3000
